Testing alternative fix to weird scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
   
  /* BODY */
-
  html, body {
-    overflow: hidden; /* Disables scrolling */
-    margin: 0;       /* Removes default margins */
+    height: -webkit-fill-available;
+    overflow-y: hidden;
   }
+  
 
  body {
     margin: 0;
@@ -63,7 +63,7 @@
     font-weight: 500;
 
     /*background-color: rgb(211, 49, 111);*/
-    background-color: rgb(158, 195, 47)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             ;
+    background-color: rgb(37, 196, 207)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             ;
     color: white;
     
     cursor: pointer;
